--- a/style.css
+++ b/style.css
@@ -1,84 +1,119 @@
 :root {
-    --primary-dark: black;
+    --primary-dark: darkblue;
     --primary-light: white;
     --primary-hover: blue;
+    --secondary-dark: gray;
 }
 
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "courier new", sans-serif;
+    background: linear-gradient(to right, lightblue, lightgreen);
 }
 
 .heading {
     text-align: center;
-    font-size: 30px;
+    font-size: 35px;
     font-weight: bold;
     color: var(--primary-dark);
     margin: 10px 0;
+    padding-top: 10px;
 }
 
 .info-text {
     /* border: 1px solid #000; */
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     font-style: italic;
     color: var(--primary-dark);
     margin: 10px 0;
 }
 
 .app {
-    /* border: 1px solid #000; */
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 300px);
+    gap: 40px;
+    justify-content: center;
+    padding: 50px;
+}
+
+.hidden {
+    display: none;
 }
 
 .note {
-    width: 100%;
-    max-width: 600px;
-    height: 100%;
-    max-height: 600px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid var(--primary-dark);
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px;
-}
-
-.textarea {
-    width: 100%;
-    height: 100%;
-    max-height: 400px;
-    max-width: 400px;
-    resize: none;
-    border: 1px solid var(--primary-dark);
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px;
-}
-
-.btn {
-    width: 10vw;
-    max-width: 250px;
-    /* border: 1px solid #000; */
-    border-radius: 5px;
-    margin: 10px;
-    padding: 10px;
-    font-size: 16px;
-    text-transform: uppercase;
-    font-weight: bold;
+    background: rgba(255, 255, 255, 0.1);
     color: var(--primary-dark);
-    background: var(--primary-light);
+    border: none;
+    outline: none;
+    padding: 17px;
+    border-radius: 15px;
+    resize: none;
+    box-shadow: 0 0 5px var(--primary-dark);
+    font-size: 18px;
+    height: 20vh;
+    width: 50vw;
+    box-sizing: border-box;
+}
+
+.note:hover,
+.note:focus {
+    background: rgba(255, 255, 255, 0.2);
+    box-shadow: 0 0 10px var(--primary-light);
+    transition: all 300ms ease;
     cursor: pointer;
 }
 
-.btn:hover {
-    background: var(--primary-hover);
+.note::placeholder {
+    color: var(--secondary-dark);
+    opacity: 30%;
+    font-style: italic;
+    text-align: center;
+}
+
+/* .textarea {
+
+} */
+
+.btn {
+    height: 200px;
+    background: rgba(255, 255, 255, .27);
     color: var(--primary-light);
+    font-size: 70px;
+    font-weight: 700;
+	-webkit-text-stroke: 1px var(--secondary-dark);
+    border-color: rgba(255, 255, 255, .37);
+    border-radius: 15px;
+    cursor: pointer;
+    box-shadow: 0 0 5px var(--secondary-dark);
+    transition: all 300ms ease;
+}
+
+.btn:hover {
+    background: rgba(255, 255, 255, 0.55);
+    box-shadow: 0 0 10px var(--primary-light);
+    color: rgba(0, 0, 0, 0.6);
+    transition: all 300ms ease;
+}
+
+
+/* Other CSS */
+
+@media screen and (max-width: 768px) {
+    .app {
+        grid-template-columns: repeat(auto-fill, 250px);
+        gap: 20px;
+        padding: 20px;
+    }
+
+    .note {
+        font-size: 16px;
+        height: 150px;
+    }
+
+    .btn {
+        height: 150px;
+        font-size: 50px;
+    }
 }
