--- a/style.css
+++ b/style.css
@@ -1,119 +1,73 @@
 :root {
     --primary-dark: darkblue;
-    --primary-light: white;
-    --primary-hover: blue;
-    --secondary-dark: gray;
+    --primary-medium: gray;
 }
 
 body {
     margin: 0;
-    padding: 0;
-    font-family: "courier new", sans-serif;
-    background: linear-gradient(to right, lightblue, lightgreen);
-}
-
-.heading {
-    text-align: center;
-    font-size: 35px;
-    font-weight: bold;
+    background: linear-gradient(to left, lightblue, lightpink);
+    font-family: "Courier New", Courier, monospace;
+  }
+  
+  .heading {
     color: var(--primary-dark);
-    margin: 10px 0;
+    text-align: center;
     padding-top: 10px;
-}
-
-.info-text {
-    /* border: 1px solid #000; */
+    font-size: 35px;
+  }
+  
+  .info-text {
     text-align: center;
-    font-size: 18px;
-    font-style: italic;
     color: var(--primary-dark);
-    margin: 10px 0;
-}
-
-.app {
+    font-size: 18px;
+  }
+  
+  .app {
     display: grid;
     grid-template-columns: repeat(auto-fill, 300px);
     gap: 40px;
     justify-content: center;
     padding: 50px;
-}
-
-.hidden {
-    display: none;
-}
-
-.note {
-    background: rgba(255, 255, 255, 0.1);
-    color: var(--primary-dark);
-    border: none;
-    outline: none;
+  }
+  
+  .note {
     padding: 17px;
     border-radius: 15px;
     resize: none;
-    box-shadow: 0 0 5px var(--primary-dark);
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
     font-size: 18px;
-    height: 20vh;
-    width: 50vw;
-    box-sizing: border-box;
-}
-
-.note:hover,
-.note:focus {
-    background: rgba(255, 255, 255, 0.2);
-    box-shadow: 0 0 10px var(--primary-light);
-    transition: all 300ms ease;
-    cursor: pointer;
-}
-
-.note::placeholder {
-    color: var(--secondary-dark);
-    opacity: 30%;
-    font-style: italic;
-    text-align: center;
-}
-
-/* .textarea {
-
-} */
-
-.btn {
     height: 200px;
-    background: rgba(255, 255, 255, .27);
-    color: var(--primary-light);
-    font-size: 70px;
-    font-weight: 700;
-	-webkit-text-stroke: 1px var(--secondary-dark);
-    border-color: rgba(255, 255, 255, .37);
-    border-radius: 15px;
-    cursor: pointer;
-    box-shadow: 0 0 5px var(--secondary-dark);
+    color: var(--primary-dark);
+    border: none;
+    outline: none;
+    background: rgba(255, 255, 255, 0.1);
+    box-sizing: border-box;
+  }
+  
+  .note::placeholder {
+    color: var(--primary-medium);
+    opacity: 30%;
+  }
+  
+  .note:hover,
+  .note:focus {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     transition: all 300ms ease;
-}
-
-.btn:hover {
-    background: rgba(255, 255, 255, 0.55);
-    box-shadow: 0 0 10px var(--primary-light);
-    color: rgba(0, 0, 0, 0.6);
-    transition: all 300ms ease;
-}
-
-
-/* Other CSS */
-
-@media screen and (max-width: 768px) {
-    .app {
-        grid-template-columns: repeat(auto-fill, 250px);
-        gap: 20px;
-        padding: 20px;
-    }
-
-    .note {
-        font-size: 16px;
-        height: 150px;
-    }
-
-    .btn {
-        height: 150px;
-        font-size: 50px;
-    }
-}
+  }
+  
+  .btn{
+      height: 200px;
+      border-color: rgba(255, 255, 255, 0.37);
+      background: rgba(255, 255, 255, 0.27);
+      border-radius: 15px;
+      font-size: 70px;
+      font-weight: 700;
+      color: rgba(0, 0, 0, 0.3);
+      cursor: pointer;
+  }
+  
+  .btn:hover{
+      background: rgba(255, 255, 255, 0.55);
+      color: rgba(0, 0, 0, 0.6);
+      transition: all 300ms ease;
+  }
